# util

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
1plan/: agent.md
1plan/memory-bank/: architecture.md  design_document.md  implementation_plan.md  progress.md  tech_stack.md
1plan/stage/: README.md
1plan/stage/build-system/: progress.md
1plan/stage/cpp23-features/: progress.md
1plan/stage/debug-utilities/: progress.md
1plan/stage/file-system/: design.md  examples.md  issues.md  progress.md  requirements.md  tasks.md
1plan/stage/network-utilities/: progress.md
1plan/stage/testing-framework/: progress.md
arch/cmake/: 3rd.cmake
arch/prev/demo/: demo0.h  demo3.h  testFuture.h
arch/prev/demo1/: demo0.h
arch/script/: snapshot.ps1  sslist.txt
arch/script/clear/: clear_release.bat  clear_yangdongfang.bat
dTest/: CMakeLists.txt  cmdTest.h  httpTest.h  main.cpp  mainWin.cpp
src/: CMakeLists.txt
src/feature/: CMakeLists.txt
src/feature/cpp23/: expected.hpp
src/prev/demo/: demo1.h  demo2.h  demo4.h  demo5.h  testTask.h
src/prev/demo/prev/: demo0.h
src/prev/demo/prev/component/: test.h  test_multTrackSync.h
src/prev/demo1/: demo1.h  demo2.h
src/sample/: progress.hpp
test/: CMakeLists.txt  main.cpp  rely.h
test/demo/component/: test.h
test/demo/system/: test.h
util/: CMakeLists.txt
util/component_util/: IDPool.hpp  multTrackSync.hpp  sliceThreadPool.hpp  slotBuffer.hpp  syncTurn.hpp  timeCount.hpp
util/control_util/: control_p.hpp  producer.hpp
util/debug/: time.hpp
util/deprecated/audio_util/: lowRecorderWASAPI.cpp  recorderDS.cpp  recorderWASAPI.cpp  recorderWASAPI.h
util/deprecated/comp/: PTSScheduler.hpp  dataTranBase.hpp  latestValueCache.hpp  ringBuffer.hpp  safeQueue.hpp  safeQueueBase.hpp
util/deprecated/ffmpeg_util/: ffmpegUtil.hpp
util/deprecated/hash/: CMakeLists.txt  file.cpp  file.h
util/deprecated/network/: http_downloadClient.hpp  network_tool.hpp
util/deprecated/wins_util/: command.hpp  testWIn.hpp  testWinManager.hpp
util/fake_util/: fakeProgress.cpp
util/infra/: CMakeLists.txt
util/infra/audio_util/: CMakeLists.txt  lowRecorderWASAPI.h  recorderDS.h
util/infra/comp/: cacheLine.hpp  callbackAgent.hpp  multTrackSync.hpp  syncTurn.hpp
util/infra/debug/: log.hpp
util/infra/fake_util/: fakeProgress.h
util/infra/ffmpeg_util/: data_type.h
util/infra/file/: CMakeLists.txt  path.cpp  path.h  self.cpp  self.h
util/infra/logic_util/: logic.hpp
util/infra/network/: CMakeLists.txt  http_downloadClient.hpp  network_tool.hpp
util/infra/network/http/: CMakeLists.txt  downloadClient.cpp  downloadClient.h  libcurl_util.cpp  libcurl_util.h  messageClient.cpp  messageClient.h  quickClient.cpp  quickClient.h
util/infra/network/http/base/: address.cpp  address.h
util/infra/network/http/sync/: nettoolbox.h  smdClient.cpp  smdClient.h
util/infra/network/http/sync/a/: syncDownloadClient.cpp  syncDownloadClient.h
util/infra/network/http/sync/b/: syncDownloadClient2.cpp  syncDownloadClient2.h
util/infra/system/: CMakeLists.txt  command.cpp  command.h
util/network/: ntpClient.hpp
util/opencv_util/display/: displayDGI.hpp
util/opencv_util/fakeCam/: fakeCam.hpp
util/time_util/: clock.hpp
util/va_util/: composer.hpp
util/wins_util/: clipboard.hpp
(+10 files in other folders)
