# add_subdirectory(sample)
# add_subdirectory(feature)

# add_library(ydmf_component_lib INTERFACE)
# target_sources(ydmf_component_lib
#     PUBLIC
#         $<TARGET_OBJECTS:ydmf_component_engine_obj>
#         $<TARGET_OBJECTS:ydmf_component_solver_obj>
#         $<TARGET_OBJECTS:ydmf_component_pipeline_obj>
# )